--- a/popcorn/templates/login.html
+++ b/popcorn/templates/login.html
@@ -1,9 +1,11 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login - Your Website</title>
+    <title>Login - Popcorn</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
@@ -110,19 +112,30 @@
 
     <div class="login-container">
       <div class="login-title">Login to Your Account</div>
-      <form>
+      <div>
+        <style>
+          h5{
+            color: red;
+          }
+        </style>
+        {% for message in messages %}
+        <h5>{{message}}</h5>
+        {% endfor %}
+      </div>
+      <form action="" method="POST">
+        {% csrf_token %}
         <div class="input-group">
           <label for="username">Username:</label>
-          <input type="text" id="username" name="username" required />
+          <input type="text" id="username" name="username" placeholder="Username" required />
         </div>
 
         <div class="input-group">
           <label for="password">Password:</label>
-          <input type="password" id="password" name="password" required />
+          <input type="password" id="password" name="password" placeholder="Password" required />
         </div>
 
         <div class="create-account">
-          Don't have an account? <a href="#">Create one</a>
+          Don't have an account? <a href="/signup"><u>Create one</u></a>
         </div>
 
         <button type="submit" class="submit-btn">Submit</button>
